--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -418,6 +418,7 @@
   padding: 10px;
   width: 100%;
   align-items: center;
+  justify-content: center;
 }
 
 .galleryItem {
@@ -428,5 +429,24 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+  text-align: center;
+}
 
+.galleryItem img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.galleryItem img:hover {
+  transform: scale(1.1);
+}
+
+.galleryItem .cardTitle {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin-top: 10px;
 }
